--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <h2 class="lukeevans">Luke Evans</h2>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <section>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./index.html">About </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </nav>
+    <section>
+        <form>
+            <label for="exampleInputEmail1">Name</label>
+            <div class="form-group col-md-6">
+                <input type="email" class="form" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <label for="exampleInputPassword1">Email</label>
+            <div class="form-group col-md-8">
+                <input type="password" class="form" id="exampleInputPassword1">
+            </div>
+            <label for="exampleInputMessage">Message</label>
+            <div class="form-group col-md-10">
+
+                <input type="Message" class="form-group" id="exampleInputMessage">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </section>
+    <div class="footer">
+        <p>
+            &copy;Copyright Luke Evans
+        </p>
+    </div>
 </body>
+
 </html>
