--- a/index.html
+++ b/index.html
@@ -11,50 +11,60 @@
 </head>
 
 <body>
-
+<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <h2>Luke Evans</h2>
+        <h2 class="lukeevans">Luke Evans</h2>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
+        <section>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./index.html">About </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </nav>
-    <section>
-        <form>
-            <label for="exampleInputEmail1">Name</label>
-            <div class="form-group">
-                <input type="email" class="form" id="exampleInputEmail1" aria-describedby="emailHelp">
+</header>
+    <section class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="page-header">
+                    <H1>About Me</H1>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="./assets/images/placeholder150.png" alt="Placeholder150" class="img-thumbnail">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                            has been the industry's standard dummy text ever since the 1500s, when an unknown
+                            printer took a galley of type and scrambled it to make a type specimen book.
+                            <br><br>
+                            It has
+                            survived not only five centuries, but also the leap into electronic typesetting,
+                            remaining essentially unchanged. It was popularised in the 1960s with the release of
+                            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                            publishing software like Aldus PageMaker including versions of Lorem Ipsu
+                        </p>
+                    </div>
+                </div>
             </div>
-            <label for="exampleInputPassword1">Email</label>
-            <div class="form-group">
-                <input type="password" class="form" id="exampleInputPassword1">
-            </div>
-            <label for="exampleInputMessage">Message</label>
-            <div class="form-group">
-
-                <input type="Message" class="form-group" id="exampleInputMessage">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        </div>
+        <div class="footer">
+            <p>
+                &copy;Copyright Luke Evans
+            </p>
+        </div>
     </section>
-    <div class="footer">
-        <p>
-            &copy;Copyright
-        </p>
-    </div>
 </body>
 
 </html>
