--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <h2 class="lukeevans">Luke Evans</h2>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <section>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./index.html">About </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </nav>
+    <div class="portfolio-subclass">
+        <h2 class="subheading"> Portfolio</h2>
+        <div class="image-container">
+            <div class="container">
+                <a href="#">
+                    <img src="assets/images/placeholder150.png" class="image">
+                </a>
+                    <div class="image-overlay">
+                    </div>
+                    <div class="text-overlay">Project 1</div>
+            </div>
+            <div class="container">
+                <a href="#">
+                    <img src="assets/images/placeholder150.png" class="image">
+                </a>
+                    <div class="image-overlay">
+                    </div>
+                    <div class="text-overlay">Project 2</div>
+            </div>
+            <div class="container">
+                <a href="#">
+                    <img src="assets/images/placeholder150.png" class="image">
+                </a>
+                    <div class="image-overlay">
+                    </div>
+                    <div class="text-overlay">Project 3</div>
+            </div>
+                        <div class="container">
+                <a href="#">
+                    <img src="assets/images/placeholder150.png" class="image">
+                </a>
+                    <div class="image-overlay">
+                    </div>
+                    <div class="text-overlay">Project 4</div>
+            </div>
+            <div class="container">
+                <a href="#">
+                    <img src="assets/images/placeholder150.png" class="image">
+                </a>
+                    <div class="image-overlay">
+                    </div>
+                    <div class="text-overlay">Project 5</div>
+            </div>
+            <div class="container">
+                <a href="#">
+                    <img src="assets/images/placeholder150.png" class="image">
+                </a>
+                    <div class="image-overlay">
+                    </div>
+                    <div class="text-overlay">Project 6</div>
+            </div>
+
+        </div>
+    </div>
+    <section class="background-img"></section>
+
+    <div class="footer">
+        <p>
+            &copy;Copyright Luke Evans
+        </p>
+    </div>
+
 </body>
+
 </html>
