adding music to website, website background, more layout changes to each html page, sticky footer, messing around with different cards

--- a/index.html
+++ b/index.html
@@ -8,42 +8,44 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
+        allowfullscreen></iframe>
 </head>
 
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <h2 class="lukeevans">Luke Evans</h2>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <section>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="./index.html">About </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </section>
-    </nav>
-</header>
-    <section class="container">
-        <div class="row">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <h2 class="lukeevans">Luke Evans</h2>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <section>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="./index.html">About </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </nav>
+    </header>
+    <section class="card">
+        <section class="container">
             <div class="col-md-8">
                 <div class="page-header">
                     <H1>About Me</H1>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="./assets/images/placeholder150.png" alt="Placeholder150" class="img-thumbnail">
+                        <img src="./assets/images/winterlulResize.png" alt="WintersFox" class="img-thumbnail">
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                             has been the industry's standard dummy text ever since the 1500s, when an unknown
@@ -58,13 +60,15 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="footer">
-            <p>
-                &copy;Copyright Luke Evans
-            </p>
-        </div>
+            </div>
+        </section>
     </section>
+    <footer class="col-12 fixed-bottom">
+        <p>
+            &copy;Copyright Luke Evans
+        </p>
+    </footer>
+
 </body>
 
 </html>
