--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
+        allowfullscreen></iframe>
 </head>
 
 <body>
@@ -34,67 +36,74 @@
         </section>
     </nav>
     <div class="portfolio-subclass">
-        <h2 class="subheading"> Portfolio</h2>
-        <div class="image-container">
-            <div class="container">
-                <a href="#">
-                    <img src="assets/images/placeholder150.png" class="image">
-                </a>
-                    <div class="image-overlay">
-                    </div>
-                    <div class="text-overlay">Project 1</div>
-            </div>
-            <div class="container">
-                <a href="#">
-                    <img src="assets/images/placeholder150.png" class="image">
-                </a>
-                    <div class="image-overlay">
-                    </div>
-                    <div class="text-overlay">Project 2</div>
-            </div>
-            <div class="container">
-                <a href="#">
-                    <img src="assets/images/placeholder150.png" class="image">
-                </a>
-                    <div class="image-overlay">
-                    </div>
-                    <div class="text-overlay">Project 3</div>
-            </div>
-                        <div class="container">
-                <a href="#">
-                    <img src="assets/images/placeholder150.png" class="image">
-                </a>
-                    <div class="image-overlay">
-                    </div>
-                    <div class="text-overlay">Project 4</div>
-            </div>
-            <div class="container">
-                <a href="#">
-                    <img src="assets/images/placeholder150.png" class="image">
-                </a>
-                    <div class="image-overlay">
-                    </div>
-                    <div class="text-overlay">Project 5</div>
-            </div>
-            <div class="container">
-                <a href="#">
-                    <img src="assets/images/placeholder150.png" class="image">
-                </a>
-                    <div class="image-overlay">
-                    </div>
-                    <div class="text-overlay">Project 6</div>
-            </div>
+        <h2 class="subheading m-2"> Portfolio</h2>
+        <div class="d-flex m-2">
 
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./assets/images/placeholder150.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./assets/images/placeholder150.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./assets/images/placeholder150.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="./assets/images/placeholder150.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/images/placeholder150.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/images/placeholder150.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <section class="background-img"></section>
-
-    <div class="footer">
+    <footer class="col-12 fixed-bottom">
         <p>
             &copy;Copyright Luke Evans
         </p>
-    </div>
 
+    </footer>
 </body>
 
 </html>
