--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
+        allowfullscreen></iframe>
 </head>
 
 <body>
@@ -34,29 +36,31 @@
             </div>
         </section>
     </nav>
-    <section>
-        <form>
-            <label for="exampleInputEmail1">Name</label>
-            <div class="form-group col-md-6">
-                <input type="email" class="form" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-            <label for="exampleInputPassword1">Email</label>
-            <div class="form-group col-md-8">
-                <input type="password" class="form" id="exampleInputPassword1">
-            </div>
-            <label for="exampleInputMessage">Message</label>
-            <div class="form-group col-md-10">
+    <div class="card" style="width: 18rem;">
+        <section>
+            <form>
+                <label for="exampleInputEmail1">Name</label>
+                <div class="form-group col-md-6">
+                    <input type="email" class="form" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <label for="exampleInputPassword1">Email</label>
+                <div class="form-group col-md-8">
+                    <input type="password" class="form" id="exampleInputPassword1">
+                </div>
+                <label for="exampleInputMessage">Message</label>
+                <div class="form-group col-md-10">
 
-                <input type="Message" class="form-group" id="exampleInputMessage">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </section>
-    <div class="footer">
+                    <input type="Message" class="form-group" id="exampleInputMessage">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </section>
+    </div>
+    <footer class="col-12 fixed-bottom">
         <p>
             &copy;Copyright Luke Evans
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
