--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary top">
             <h2 class="lukeevans">Luke Evans</h2>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,8 +37,8 @@
             </section>
         </nav>
     </header>
-    <section class="card">
-        <section class="container">
+    <section class="container">
+        <section class="container border border-dark mb-5">
             <div class="col-md-8">
                 <div class="page-header">
                     <H1>About Me</H1>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-            </div>
+
         </section>
     </section>
     <footer class="col-12 fixed-bottom">
