removed all content from portfolio page (cards), messing around with the design of the current webpage

--- a/contact.html
+++ b/contact.html
@@ -41,19 +41,21 @@
                 </section>
             </nav>
     </nav>
-    <div class="card" style="width: 18rem;">
+    <div class="container" style="width: 18rem;">
+        <section class="container border border-dark mb-5">
         <section>
+            <header>Contact</header>
             <form>
                 <label for="exampleInputEmail1">Name</label>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-6 col-md-6">
                     <input type="email" class="form" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
                 <label for="exampleInputPassword1">Email</label>
-                <div class="form-group col-md-8">
+                <div class="form-group col-md-8 col-md-4">
                     <input type="password" class="form" id="exampleInputPassword1">
                 </div>
                 <label for="exampleInputMessage">Message</label>
-                <div class="form-group col-md-10">
+                <div class="form-group col-md-10 col-md-6">
 
                     <input type="Message" class="form-group" id="exampleInputMessage">
                 </div>
