adding portfolio layout page and contact page (html) updates, WIP background sizing/CSS editing

--- a/index.html
+++ b/index.html
@@ -7,69 +7,70 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
+    <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
         allowfullscreen></iframe>
+    <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
 
 <body>
-        <section class="header">
-            <video autoplay loop class="meteorengine" muted plays-inline>
-                <source src="assets/images/meteorengine.mp4" type="video/mp4">
-            </video>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary top">
-                <h2 class="lukeevans">Luke Evans</h2>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <section>
-                    <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="./index.html">About </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </section>
-            </nav>
-    <section class="container">
-        <section class="container border border-dark mb-5">
-            <div class="col-md-8">
-                <div class="page-header">
-                    <H1>About Me</H1>
+    <section class="header">
+        <video autoplay loop class="meteorengine" muted plays-inline>
+            <source src="assets/images/meteorengine.mp4" type="video/mp4">
+        </video>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary top">
+            <h2 class="navbar-brand h1">Luke Evans</h2>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <section>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="./index.html">About </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contact.html">Contact</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <img src="./assets/images/winterlulResize.png" alt="WintersFox" class="img-thumbnail">
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                            has been the industry's standard dummy text ever since the 1500s, when an unknown
-                            printer took a galley of type and scrambled it to make a type specimen book.
-                            <br><br>
-                            It has
-                            survived not only five centuries, but also the leap into electronic typesetting,
-                            remaining essentially unchanged. It was popularised in the 1960s with the release of
-                            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                            publishing software like Aldus PageMaker including versions of Lorem Ipsu
-                        </p>
+            </section>
+        </nav>
+        <section class="container">
+            <section class="container border border-dark mb-5">
+                <div class="col-md-8">
+                    <div class="page-header">
+                        <H1>About Me</H1>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <img src="./assets/images/winterlulResize.png" alt="WintersFox" class="img-thumbnail">
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.
+                                <br><br>
+                                It has
+                                survived not only five centuries, but also the leap into electronic typesetting,
+                                remaining essentially unchanged. It was popularised in the 1960s with the release of
+                                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                                publishing software like Aldus PageMaker including versions of Lorem Ipsu
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
+            </section>
         </section>
-    </section>
-    <footer class="col-12 fixed-bottom">
-        <p>
-            &copy;Copyright Luke Evans
-        </p>
-    </footer>
+        <footer class="col-12 fixed-bottom">
+            <p>
+                &copy;Copyright Luke Evans
+            </p>
+        </footer>
 
 </body>
 
