--- a/contact.html
+++ b/contact.html
@@ -4,70 +4,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
-    allowfullscreen></iframe>
+    <title>Luke Evans Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
+        allowfullscreen></iframe>
     <link rel="stylesheet" href="./assets/css/style.css">
-  
+
 </head>
 
 <body>
-        <section class="header">
-            <video autoplay loop class="meteorengine" muted plays-inline>
-                <source src="assets/images/meteorengine.mp4" type="video/mp4">
-            </video>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary top">
-                <h2 class="lukeevans">Luke Evans</h2>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <section>
-                    <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="./index.html">About </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./contact.html">Contact</a>
-                            </li>
-                        </ul>
+    <section class="header">
+        <video autoplay loop class="meteorengine" muted plays-inline>
+            <source src="assets/images/meteorengine.mp4" type="video/mp4">
+        </video>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
+            <h2 class="navbar-brand h1">Luke Evans</h2>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <section>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar navbar-nav navbar-right">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="./index.html">About </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </nav>
+        </nav>
+        <div class="container" style="width: 18rem;">
+            <form class="col-lg-12 col-md-12 border">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="page-header border-bottom">
+                            <h1>Contact</h1>
+                        </div>
                     </div>
-                </section>
-            </nav>
-    </nav>
-    <div class="container" style="width: 18rem;">
-        <section class="container border border-dark mb-5">
-        <section>
-            <header>Contact</header>
-            <form>
-                <label for="exampleInputEmail1">Name</label>
-                <div class="form-group col-md-6 col-md-6">
-                    <input type="email" class="form" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
-                <label for="exampleInputPassword1">Email</label>
-                <div class="form-group col-md-8 col-md-4">
-                    <input type="password" class="form" id="exampleInputPassword1">
+                <div class="form-row">
+                    <div class="form-group col-lg-12">
+                        <label for="inputName">Name</label>
+                        <input type="text" class="form-control" id="inputName" placeholder="JohnDoe">
+                    </div>
                 </div>
-                <label for="exampleInputMessage">Message</label>
-                <div class="form-group col-md-10 col-md-6">
+                <div class="form-row">
+                    <div class="form-group col-lg-12">
+                        <label for=inputEmail1>Email</label>
+                        <input type="email" class="form-control" id="inputEmail1" placeholder="example@gmail.com">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-lg-12">
+                        <label for="inputMessage">Message</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Send me a note!"
+                            rows="6"></textarea>
+                    </div>
+                </div>
 
-                    <input type="Message" class="form-group" id="exampleInputMessage">
-                </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-        </section>
-    </div>
-    <footer class="col-12 fixed-bottom">
-        <p>
-            &copy;Copyright Luke Evans
-        </p>
-    </footer>
+        </div>
+        <footer class="col-12 fixed-bottom">
+            <p>
+                &copy;Copyright Luke Evans
+            </p>
+        </footer>
 </body>
 
 </html>
