--- a/portfolio.html
+++ b/portfolio.html
@@ -7,9 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css">
     <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
         allowfullscreen></iframe>
+    <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
 
 <body>
@@ -39,29 +40,60 @@
                 </div>
             </section>
         </nav>
-
-            <div class="portfolio-subclass">
-                <section class="container">
-                    <section class="container border border-dark mb-2">
-                        <div class="col-md-8">
-                            <h2 class="subheading m-2"> Portfolio</h2>
+        <section class="container">
+            <form class="container border border-dark mb-2">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12">
+                        <div class="page-header border-bottom">
+                            <h1 class="subheading m-2"> Portfolio</h1>
                             <div class="d-flex m-2">
-
-                               
-
                             </div>
                         </div>
-                    </section>
-                </section>
-            </div>
+                        <div class="row justify-content-center">
+                            <div class="card bg-clear text-dark" style="width:18rem;">
+                                <img class="card-img" src="assets/images/placeholder150.png" alt="Example #1">
+                                <div class="card-img-overlay d-flex flex-column justify-content-center">
+                                    <h4 class="card title text-center">Example #1</h4>
+                                </div>
+                            </div>
+                            <div class="card bg-clear text-dark" style="width:18rem;">
+                                <img class="card-img" src="assets/images/placeholder150.png" alt="Example #2">
+                                <div class="card-img-overlay d-flex flex-column justify-content-center">
+                                    <h4 class="card title text-center">Example #2</h4>
+                                </div>
+                            </div>
+                            <div class="card bg-clear text-dark" style="width:18rem;">
+                                <img class="card-img" src="assets/images/placeholder150.png" alt="Example #3">
+                                <div class="card-img-overlay d-flex flex-column justify-content-center">
+                                    <h4 class="card title text-center">Example #3</h4>
+                                </div>
+                            </div>
+                            <div class="card bg-clear text-dark" style="width:18rem;">
+                                <img class="card-img" src="assets/images/placeholder150.png" alt="Example #4">
+                                <div class="card-img-overlay d-flex flex-column justify-content-center">
+                                    <h4 class="card title text-center">Example #4</h4>
+                                </div>
+                            </div>
+                            <div class="card bg-clear text-dark" style="width:18rem;">
+                                <img class="card-img" src="assets/images/placeholder150.png" alt="Example #5">
+                                <div class="card-img-overlay d-flex flex-column justify-content-center">
+                                    <h4 class="card title text-center">Example #5</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </section>
-        <section class="background-img"></section>
-        <footer class="col-12 fixed-bottom">
-            <p>
-                &copy;Copyright Luke Evans
-            </p>
+    </section>
 
-        </footer>
+
+    <footer class="col-12 fixed-bottom">
+        <p>
+            &copy;Copyright Luke Evans
+        </p>
+
+    </footer>
 </body>
 
 </html>
