updated about me page with relevant information

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
-        allowfullscreen></iframe>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
@@ -20,8 +18,7 @@
         </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary top">
             <h2 class="navbar-brand h1">Luke Evans</h2>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <section>
@@ -50,15 +47,21 @@
                         <div class="col-md-12">
                             <img src="./assets/images/winterlulResize.png" alt="WintersFox" class="img-thumbnail">
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's standard dummy text ever since the 1500s, when an unknown
-                                printer took a galley of type and scrambled it to make a type specimen book.
-                                <br><br>
-                                It has
-                                survived not only five centuries, but also the leap into electronic typesetting,
-                                remaining essentially unchanged. It was popularised in the 1960s with the release of
-                                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                                publishing software like Aldus PageMaker including versions of Lorem Ipsu
+                                Hello and welcome to my about me page! My name is Luke Evans. I was born and raised in Gold Hill NorthCarolina on a Tenessee walking horse farm. As I grew up I found I had a passion for video games. After leaving college I started immediately into the
+                                workforce working odd jobs within construction, the restauraunt industry, car sales, and event setup/management.
+                                <br><br> My obsession with videogames quickly became a burning desire after working in other industries. I took the leap to apply to my favorite video game company (EpicGames) for an entry level QA position working on Fortnite
+                                Save the world. Soon after I transitioned to the Performance and Memory team helping develop and optomize Fortnite Battle Royale and Creative mode. I worked diligently for the past 2 years to help make Fortnite one of the
+                                best video games in the world.
+                                <br> <br> Some of the things I enjoy:
+                                <ul>
+                                    <li>Memes</li>
+                                    <li>Dancing</li>
+                                    <li>Playing competitive First/Third person shooters</li>
+                                    <li>Playing with my Doberman Bella-Mia</li>
+                                    <li>Pop Culture</li>
+                                    <li>Rain on a tin roof </li>
+                                    <li>Competitive swimming</li>
+                                </ul>
                             </p>
                         </div>
                     </div>
