--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
-        allowfullscreen></iframe>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
@@ -20,8 +18,7 @@
         </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary top">
             <h2 class="lukeevans">Luke Evans</h2>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <section>
@@ -52,31 +49,31 @@
                         <div class="row justify-content-center">
                             <div class="card bg-clear text-dark" style="width:18rem;">
                                 <img class="card-img" src="assets/images/placeholder150.png" alt="Example #1">
-                                <div class="card-img-overlay d-flex flex-column justify-content-center">
+                                <div class="card-img-overlay d-flex flex-column justify-content-left">
                                     <h4 class="card title text-center">Example #1</h4>
                                 </div>
                             </div>
                             <div class="card bg-clear text-dark" style="width:18rem;">
                                 <img class="card-img" src="assets/images/placeholder150.png" alt="Example #2">
-                                <div class="card-img-overlay d-flex flex-column justify-content-center">
+                                <div class="card-img-overlay d-flex flex-column justify-content-left">
                                     <h4 class="card title text-center">Example #2</h4>
                                 </div>
                             </div>
                             <div class="card bg-clear text-dark" style="width:18rem;">
                                 <img class="card-img" src="assets/images/placeholder150.png" alt="Example #3">
-                                <div class="card-img-overlay d-flex flex-column justify-content-center">
+                                <div class="card-img-overlay d-flex flex-column justify-content-left">
                                     <h4 class="card title text-center">Example #3</h4>
                                 </div>
                             </div>
                             <div class="card bg-clear text-dark" style="width:18rem;">
                                 <img class="card-img" src="assets/images/placeholder150.png" alt="Example #4">
-                                <div class="card-img-overlay d-flex flex-column justify-content-center">
+                                <div class="card-img-overlay d-flex flex-column justify-content-left">
                                     <h4 class="card title text-center">Example #4</h4>
                                 </div>
                             </div>
                             <div class="card bg-clear text-dark" style="width:18rem;">
                                 <img class="card-img" src="assets/images/placeholder150.png" alt="Example #5">
-                                <div class="card-img-overlay d-flex flex-column justify-content-center">
+                                <div class="card-img-overlay d-flex flex-column justify-content-left">
                                     <h4 class="card title text-center">Example #5</h4>
                                 </div>
                             </div>
