updating H2 class tag

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luke Evans Portfolio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
-        allowfullscreen></iframe>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
@@ -19,9 +17,8 @@
             <source src="assets/images/meteorengine.mp4" type="video/mp4">
         </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
-            <h2 class="navbar-brand h1">Luke Evans</h2>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <h2 class="lukeevans">Luke Evans</h2>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <section>
@@ -65,8 +62,7 @@
                 <div class="form-row">
                     <div class="form-group col-lg-12">
                         <label for="inputMessage">Message</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Send me a note!"
-                            rows="6"></textarea>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Send me a note!" rows="6"></textarea>
                     </div>
                 </div>
 
