--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <source src="assets/images/meteorengine.mp4" type="video/mp4">
         </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary top">
-            <h2 class="navbar-brand h1">Luke Evans</h2>
+            <h2 class="lukeevans">Luke Evans</h2>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
